--- a/interactive/index.html
+++ b/interactive/index.html
@@ -135,6 +135,21 @@
           <span class="current-value">1%</span>
           <span class="max-value">100%</span>
         </div>
+        <label for="simTrial">Simulation Trial</label>
+        <input
+          type="range"
+          id="simTrial"
+          value="1"
+          step="1"
+          min="1"
+          max="10000"
+          oninput="updateSliderTrial(this)"
+        /> 
+        <div class="slider-values">
+          <span class="min-value">1</span>
+          <span class="current-value">1</span>
+          <span class="max-value">10000</span>
+        </div>
       </section>
     </div>
     <div id="dashboard"></div>
@@ -143,6 +158,12 @@
         const currentValueSpan =
           slider.nextElementSibling.querySelector(".current-value");
         currentValueSpan.textContent = `${Math.floor(slider.value * 100)}%`;
+      }
+      
+      function updateSliderTrial(slider) {
+        const currentValueSpan =
+          slider.nextElementSibling.querySelector(".current-value");
+        currentValueSpan.textContent = `${slider.value}`;
       }
 
       document
